--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.10.0",
     "daisyui": "^5.0.46",
+    "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.1",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
