--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-multi-date-picker": "^4.5.2",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.6",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
